Propertie service.